<resources>
    <string name="app_name">UW NBI</string>
    <string name="patientenname"><![CDATA[<b>Patientenname:</b><br>]]></string>
    <string name="patientenalter"><![CDATA[<br><br><b>Patientenalter:</b><br>]]></string>
    <string name="u18m"><![CDATA[<br><br>Da der Patient jünger als 18 Monate, bzw. 18 Monate, alt ist, findet eine abgeänderte Berechnung statt, in der sowohl einzelne Kriterien, als auch ganze Module wegfallen.]]></string>
    <string name="ue18m"><![CDATA[<br><br>Da der Patient älter als 18 Monate und jünger als 18 Jahre alt ist, findet eine abgeänderte Berechnung statt, in der einzelne Kriterien mit unterschiedlichen Einzelpunkten berechnet werden.]]></string>
    <string name="ue18j"><![CDATA[<br><br>Da der Patient älter als 18 Jahre ist, findet die Standardberechnung statt.]]></string>
    <string name="m001">Neues Begutachtungsinstrument zur Feststellung von Pflegebedürftigkeit</string>
    <string name="m002">Neue Begutachtung</string>
    <string name="m003">Daten Laden</string>
    <string name="m004">Login</string>
    <string name="m005">Patientendaten</string>
    <string name="m006">Vorname</string>
    <string name="m007">Nachname</string>
    <string name="m008">Geburtsdatum</string>
    <string name="m009">Bitte ausfüllen</string>
    <string name="m010">Bitte Geburtsdatum auswählen</string>
    <string name="m011">Account Registrieren</string>
    <string name="m012">Gerät Registrieren</string>
    <string name="m013">Lizenzen Kaufen</string>
    <string name="m014">Alter</string>
    <string name="m015">Zu unserem Seminarkalender</string>
    <string name="m016">Datenschutzerklärung</string>
    <string name="m017">Beim Monatskalender kann oben links die Jahreszahl ausgewählt werden.</string>
    <string name="m1ueberschrift">Modul 1: Mobilität</string>
    <string name="m101">1.1 Positonswechsel im Bett</string>
    <string name="m102">1.2 Halten einer stabilen Sitzposition</string>
    <string name="m103">1.3 Umsetzen</string>
    <string name="m104">1.4 Fortbewegen innerhalb des Wohnbereichs</string>
    <string name="m105">1.5 Treppensteigen</string>
    <string name="m106">1.6 Besondere Bedarfskonstellation</string>
    <string name="m2ueberschrift">Modul 2: kognitive und kommunikative Fähigkeiten</string>
    <string name="m201">2.1 Erkennen von Personen aus dem näheren Umfeld</string>
    <string name="m202">2.2 Örtliche Orientierung</string>
    <string name="m203">2.3 Zeitliche Orientierung</string>
    <string name="m204">2.4 Erinnern an wesentliche Ereignisse und Beobachtungen</string>
    <string name="m205">2.5 Steuern von mehrschichtigen Alltagshandlungen</string>
    <string name="m206">2.6 Treffen von Entscheidungen im Alltag</string>
    <string name="m207">2.7 Verstehen von Sachverhalten und Informationen</string>
    <string name="m208">2.8 Erkennen von Risiken und Gefahren</string>
    <string name="m209">2.9 Mitteilen von elementaren Bedürfnissen</string>
    <string name="m210">2.10 Verstehen von Aufforderungen</string>
    <string name="m211">2.11 Beteiligen an einem Gespräch</string>
    <string name="m3ueberschrift">Modul 3: Verhaltensweisen und psychische Problemlagen</string>
    <string name="m301">3.1 Motorisch geprägte Verhaltensauffälligkeiten</string>
    <string name="m302">3.2 Nächtliche Unruhe</string>
    <string name="m303">3.3 Selbstschädigendes und autoagressives Verhalten</string>
    <string name="m304">3.4 Beschädigen von Gegenständen</string>
    <string name="m305">3.5 Physisch aggresives Verhalten gegenüber anderen Personen</string>
    <string name="m306">3.6 Verbale Aggression</string>
    <string name="m307">3.7 Andere pflegerelevante vokale Auffälligkeiten</string>
    <string name="m308">3.8 Abwehr pflegerischer und anderer unterstützender Maßnahmen</string>
    <string name="m309">3.9 Wahnvorstellungen</string>
    <string name="m310">3.10 Ängste</string>
    <string name="m311">3.11 Antriebslosigkeit bei depressiver Stimmungslage</string>
    <string name="m312">3.12 Sozial inadäquate Verhaltensweisen</string>
    <string name="m313">3.13 Sonstige pflegerelevante inadäquate Handlungen</string>
    <string name="m4ueberschrift">Modul 4: Selbstversorgung</string>
    <string name="m401">4.1 Waschen des vorderen Oberkörpers</string>
    <string name="m402">4.2 Körperpflege im Bereich des Kopfes (Kämmen, Zahnpflege / Prothesenreinigung, Rasieren)</string>
    <string name="m403">4.3 Waschen des Intimbereichs</string>
    <string name="m404">4.4 Duschen und Baden einschließlich Waschen der Haare</string>
    <string name="m405">4.5 An- und Auskleiden des Oberkörpers</string>
    <string name="m406">4.6 An und Auskleiden des Unterkörpers</string>
    <string name="m407">4.7 Mundgerechtes Zubereiten der Nahrung und Eingießen von Getränken</string>
    <string name="m408">4.8 Essen</string>
    <string name="m409">4.9 Trinken</string>
    <string name="m410">4.10 Benutzen einer Toilette oder eines Toilettenstuhls</string>
    <string name="m411">4.11 Bewältigen der Folgen einer Harninkontinenz und Umgang mit Dauerkatheter und Urostoma</string>
    <string name="m412">4.12 Bewältigen der Folgen einer Stuhlinkontinenz und Umgang mit Stoma</string>
    <string name="m413">4.13 Ernährung parenteral oder über Sonde</string>
    <string name="m4k">4.0 Bestehen gravierende Probleme bei der Nahrungsaufnahme bei Kindern bis zu 18 Monaten, die einen außergewöhnlich pflegeintensiven Hilfebedarf auslösen?</string>
    <string name="m5ueberschrift">Modul 5: Bewältigung von und der selbständige Umgang mit krankheits- oder therapiebedingten Anforderungen und Belastungen</string>
    <string name="m501">5.1 Medikation</string>
    <string name="m502">5.2 Injektionen (subcutan oder intramuskulär)</string>
    <string name="m503">5.3 Versorgung intravenöser Zugänge (Port)</string>
    <string name="m504">5.4 Absaugen und Sauerstoffgabe</string>
    <string name="m505">5.5 Einreibungen oder Kälte- und Wärmeanwendungen</string>
    <string name="m506">5.6 Messung und Deutung von Körperzuständen</string>
    <string name="m507">5.7 Körpernahe Hilfsmittel</string>
    <string name="m508">5.8 Verbandswechsel und Wundversorgung</string>
    <string name="m509">5.9 Versorgung mit Stoma</string>
    <string name="m510">5.10 Regelmäßige Einmalkatheterisierung und Nutzung von Abführmethoden</string>
    <string name="m511">5.11 Therapiemaßnahmen in häuslicher Umgebung</string>
    <string name="m512">5.12 Zeit- und technikintensive Maßnahmen in häuslicher Umgebung</string>
    <string name="m513">5.13 Arztbesuche</string>
    <string name="m514">5.14 Besuch anderer medizinischer oder therapeutischer Einrichtungen (bis zu drei Stunden)</string>
    <string name="m515">5.15 Besuch anderer medizinischer oder therapeutischer Einrichtungen (länger als drei Stunden)</string>
    <string name="m5k">5.k Besuche von Einrichtungen zur Frühförderung bei Kindern</string>
    <string name="m516">5.16 Einhaltung einer Diät und anderen krankheits- oder therapiebedingter Verhaltensvorschriften</string>
    <string name="m6ueberschrift">Modul 6: Gestaltung des Alltagslebens</string>
    <string name="m601">6.1 Gestaltung des Tagesablaufs und Anpassung an Veränderungen</string>
    <string name="m602">6.2 Ruhen und Schlafen</string>
    <string name="m603">6.3 Sichbeschäftigen</string>
    <string name="m604">6.4 Vornehmen von in die Zukunft gerichteten Planungen</string>
    <string name="m605">6.5 Interaktion mit Personen im direkten Kontakt</string>
    <string name="m606">6.6 Kontaktpflege zu Personen außerhalb des direkten Umfelds</string>
    <string name="mAueberschrift">Modul 6: Gestaltung des Alltagslebens</string>
    <string name="mA01">Modul 1: </string>
    <string name="mA02">Modul 2: </string>
    <string name="mA03">Modul 3: </string>
    <string name="mA04">Modul 4: </string>
    <string name="mA05">Modul 5: </string>
    <string name="mA06">Modul 6: </string>
    <string name="mA07">Summe der gewichteten Assessmentpunkte: </string>
    <string name="mA08">Besondere Bedarfskonstellation: </string>
    <string name="mA09">Pflegegrad: </string>
    <string name="mA10">Speichern</string>
    <string name="mA11">Möchten sie die Daten wirklich speichern?</string>
    <string name="mA12">Zurück zum Start</string>
    <string name="mA13">Begutachtet am</string>
    <string name="mA14">Löschen</string>
    <string name="weiter">Weiter</string>
    <string name="speichern">Sind Sie sicher, dass Sie diese Daten speichern wollen?</string>
    <string name="pms">Per mail senden</string>
    <string name="pmsSecure">Wollen Sie diese Daten wirklich an Ihre E-Mailadresse senden?</string>
    <string name="title_activity_modul_1__auswertung">Modul_1_Auswertung</string>
    <string name="title_activity_modul_2__auswertung">Modul_2_Auswertung</string>
    <string name="title_activity_modul_3__auswertung">Modul_3_Auswertung</string>
    <string name="title_activity_modul_4__auswertung">Modul_4_Auswertung</string>
    <string name="title_activity_modul_5__auswertung">Modul_5_Auswertung</string>
    <string name="title_activity_modul_6__auswertung">Modul_6_Auswertung</string>
    <string name="title_activity_modul_Auswertung__auswertung">Ergebnis der Begutachtung</string>
    <string name="qest">\?</string>
    <string name="infotext100"><![CDATA[Die Einschätzung richtet sich ausschließlich danach, ob die Person in der Lage ist ohne personelle Unterstützung eine Körperhaltung einzunehmen/zu wechseln und sich fortzubewegen. Zu beurteilen sind hier lediglich Aspekte wie Körperkraft, Balance, Bewegungskoordination etc. und nicht die zielgerichtete Fortbewegung. Hier werden nicht die Folgen kognitiver Beeinträchtigungen auf Planung, Steuerung und Durchführung motorischer Handlungen abgebildet.]]></string>
    <string name="infotext101"><![CDATA[<H1><b>Positionswechsel im Bett</b></H1><b>Einnehmen von verschiedenen Positionen im Bett, Drehen um die Längsachse, Aufrichten aus dem Liegen</b><br><br>
                                <b>Selbständig:</b> Selbständig ist auch eine Person, die ihre Position unter Nutzung von Hilfsmitteln (Aufrichthilfe, Bettseitenteil, Strickleiter, elektrisch verstellbares Bett) allein verändern kann.<br>
                                <b>Überwiegend selbständig:</b> Die Person kann beispielsweise nach Anreichen eines Hilfsmittels oder Reichen der Hand die Lage im Bett verändern.<br>
                                <b>Überwiegend unselbständig:</b> Die Person kann beim Positionswechsel nur wenig mithelfen, z.B. auf den Rücken rollen, am Bettgestell festhalten, Aufforderungen folgen wie z.B. „Bitte die Arme vor der Brust verschränken und den Kopf auf die Brust legen.“<br>
                                <b>Unselbständig:</b> Die Person kann sich beim Positionswechsel nicht oder nur minimal beteiligen.]]></string>
    <string name="bitAus">Bitte ausfüllen</string>
</resources>