<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.KM.boxnif.dia.Modul_Auswertung">

    <TextView
        android:text="@string/m006"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vName"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/m007"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nName"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_below="@+id/vName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/m008"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gDatum"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/nName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="alter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alter"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_below="@+id/gDatum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA01"
        android:id="@+id/endauswertung_01"
        android:textColor="@android:color/black"
        android:layout_below="@+id/alter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA02"
        android:id="@+id/endauswertung_02"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endauswertung_01"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA03"
        android:id="@+id/endauswertung_03"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endauswertung_02"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA04"
        android:id="@+id/endauswertung_04"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endauswertung_03"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA05"
        android:id="@+id/endauswertung_05"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endauswertung_04"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mA06"
        android:id="@+id/endauswertung_06"
        android:textColor="@android:color/black"
        android:layout_below="@+id/endauswertung_05"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
