<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_patienten_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.KM.boxnif.dia.PatientenInfo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m005"
        android:id="@+id/ueberschrift"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="12pt"/>

    <View
        android:id="@+id/thickview"
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:background="#000000"
        android:layout_below="@+id/ueberschrift"/>




    <TextView
        android:text="@string/m006"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_below="@+id/thickview"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText1"
        android:layout_below="@+id/textView1"
        android:imeOptions="actionDone"
        android:background="@android:drawable/editbox_background"
        android:textColor="?attr/colorControlNormal"
        android:hint="@string/bitAus"/>


    <TextView
        android:text="@string/m007"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/editbox_background"
        android:imeOptions="actionDone"
        android:textColor="?attr/colorControlNormal"
        android:hint="@string/bitAus"/>

    <TextView
        android:text="@string/m008"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText2"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>

    <Button
        android:text="@string/weiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/modulStartButton"/>

    <Button
        android:text="@string/m010"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/datePickerButton"
        android:background="@android:drawable/editbox_background"
        android:textColor="?attr/colorControlNormal"
        android:singleLine="false"
        />

</RelativeLayout>
