<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.KM.boxnif.dia.StartUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/uwlogo"
                android:layout_alignParentTop="true"
                android:id="@+id/imageView"
                android:scaleType="fitCenter"
                android:contentDescription=""
                android:layout_weight="0.83"
                android:layout_height="200dp"/>

            <TextView
                android:text="@string/m001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="false"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView"
                android:layout_below="@+id/imageView"
                android:textColorLink="?attr/editTextColor"
                android:textColor="@android:color/background_dark"
                android:autoText="false"
                android:textSize="21sp"
                android:textAlignment="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m002"
                android:id="@+id/startButton"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="10dp"/>

            <Button
                android:text="@string/m003"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/loadButton"
                android:layout_below="@+id/startButton"
                android:layout_marginTop="10dp"/>

            <Button
                android:text="@string/m004"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/loadButton"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="false"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/registrierenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.83"
                android:text="@string/m011"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>